# Markopy

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CopyOfCMakeCache.txt  DartConfiguration.tcl  Dockerfile  Dockerfile.cross-win32  Doxyfile  Makefile  MarkovPasswords.sln  README.md  build-documentation.bat  build-documentation.sh  sonar-project.properties
.github/ISSUE_TEMPLATE/: bug_report.md  platform-support-request.md
.github/action_helpers/: actions_linux_python_libs.sh  actions_linux_setup_boost.sh  actions_linux_setup_libboost.sh  actions_windows_libboost.ps1  actions_windows_libpython.ps1  build.py
.github/workflows/: Sonar-scan.yml  build.yml  build_dev.yml  build_minor.yml  build_patch.yml  build_release.yml  make.yml  msbuild.yml
CudaMarkopy/: CMakeLists.txt
CudaMarkopy/src/CLI/: cudamarkopy.py  cudammx.py  cudammx_cli.py
CudaMarkopy/src/Module/: cudaMarkopy.cpp  cudaMarkopy.cu
CudaMarkovAPI/: CMakeLists.txt  CudaMarkovPasswords.vcxproj
CudaMarkovAPI/src/: cudaDeviceController.cu  cudaDeviceController.h  cudaModelMatrix.cu  cudaModelMatrix.h  cudarandom.h  main.cu
CudaMarkovPasswords/: CudaMarkovPasswords.vcxproj.filters
CudaMarkovPasswords/src/: cudaDeviceController.cu  cudaDeviceController.h  cudaModelMatrix.cu  cudaModelMatrix.h  cudarandom.h  main.cu
Markopy/: CMakeLists.txt  Markopy.vcxproj  Markopy.vcxproj.filters
Markopy/src/CLI/: base.py  evaluate.py  importer.py  markopy.py  markopy_cli.py  mm.py  mmx.py  mmx_cli.py  mp.py  mp_cli.py
Markopy/src/Module/: markopy.cpp
MarkovAPI/: CMakeLists.txt
MarkovAPI/src/: markovPasswords.cpp  markovPasswords.h  modelMatrix.cpp  modelMatrix.h  threadSharedListHandler.cpp  threadSharedListHandler.h
MarkovAPICLI/: CMakeLists.txt
MarkovAPICLI/src/: argparse.cpp  argparse.h  main.cpp
MarkovAPICLI/src/color/: term.cpp  term.h
MarkovAPICLI/src/scripts/: model_2gram.py  random_model.py
MarkovModel/: MarkovModel.vcxproj  MarkovModel.vcxproj.filters
MarkovModel/src/: MarkovModel.h  dllmain.cpp  edge.cpp  edge.h  framework.h  model.cpp  model.h  node.cpp  node.h  pch.cpp  pch.h  random.h
MarkovPasswords/: CMakeLists.txt  MarkovPasswords.vcxproj  MarkovPasswords.vcxproj.filters
MarkovPasswords/models/: 2gram-built.mdl
MarkovPasswords/src/: argparse.cpp  argparse.h  main.cpp  markovPasswords.cpp  markovPasswords.h  modelMatrix.cpp  modelMatrix.h  threadSharedListHandler.cpp  threadSharedListHandler.h
MarkovPasswords/src/color/: term.cpp  term.h
MarkovPasswordsGUI/: .qmake.stash  CLI.cpp  CLI.h  CLI.ui  CMakeLists.txt  Generate.cpp  Generate.h  Generate.ui  MarkovPasswordsGUI.qrc  MarkovPasswordsGUI.ui  MarkovPasswordsGUI.vcxproj  MarkovPasswordsGUI.vcxproj.filters  Train.cpp  Train.ui  about.cpp  about.h  about.ui  backimage.qrc  comparison.htm  menu.ui  resource.h
MarkovPasswordsGUI/src/: CLI.cpp  CLI.h  Comparison.ui  Generate.cpp  Generate.h  Generate.ui  MarkovPasswordsGUI.cpp  MarkovPasswordsGUI.h  Train.cpp  Train.h  Train.ui  about.cpp  about.h  about.ui  main.cpp  menu.cpp  menu.h
MarkovPasswordsGUI/views/: HTMLPage.htm  bar.html  bar.mdl  example.html  file2.mdl  index.html
UnitTests/: UnitTests.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters  pch.cpp  pch.h
Win-visualstudio/: MarkovPasswords.sln
Win-visualstudio/MarkovModel/: MarkovModel.vcxproj  MarkovModel.vcxproj.filters  dllmain.cpp  model.cu  model.h
Win-visualstudio/MarkovPasswords/: MarkovPasswords.vcxproj  MarkovPasswords.vcxproj.filters
Win-visualstudio/MarkovPasswordsGUI/: .qmake.stash  Comparison.htm  MarkovPasswordsGUI.cpp  MarkovPasswordsGUI.h  MarkovPasswordsGUI.rc  MarkovPasswordsGUI.ui  MarkovPasswordsGUI.vcxproj  MarkovPasswordsGUI.vcxproj.filters  Start.cpp  Start.h  Start.ui  Train.cpp  Train.h  Train.ui  conf.vcxproj  conf.vcxproj.filters  dynamic.htm  main.cpp  menu.h  menu.ui  model.htm
Win-visualstudio/UnitTests/: UnitTests.cpp
docs/: .html  2gram-model_8py.html  CNAME  _c_l_i_8cpp.html  _c_l_i_8cpp__incl.map  _c_l_i_8cpp__incl.md5  _c_l_i_8cpp_source.html  _c_l_i_8h.html  _c_l_i_8h__dep__incl.map  _c_l_i_8h__dep__incl.md5  _c_l_i_8h__incl.map  _c_l_i_8h__incl.md5  _c_l_i_8h_source.html  _generate_8cpp.html  _generate_8cpp__incl.map  _generate_8cpp__incl.md5  _generate_8cpp_source.html  _generate_8h.html  _generate_8h__dep__incl.map  _generate_8h__dep__incl.md5  _generate_8h__incl.md5  _generate_8h_source.html  _markov_a_p_i_c_l_i_2src_2main_8cpp.html  _markov_a_p_i_c_l_i_2src_2main_8cpp.js  _markov_a_p_i_c_l_i_2src_2main_8cpp__incl.map  _markov_a_p_i_c_l_i_2src_2main_8cpp__incl.md5  _markov_a_p_i_c_l_i_2src_2main_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.map  _markov_a_p_i_c_l_i_2src_2main_8cpp_source.html  _markov_model_2src_2pch_8cpp.html  _markov_model_2src_2pch_8cpp__incl.map  _markov_model_2src_2pch_8cpp__incl.md5  _markov_model_2src_2pch_8cpp_source.html  _markov_model_2src_2pch_8h.html  _markov_model_2src_2pch_8h__dep__incl.map  _markov_model_2src_2pch_8h__incl.map  _markov_model_2src_2pch_8h_source.html  _markov_model_8h.html  _markov_passwords_g_u_i_2src_2main_8cpp.html  _markov_passwords_g_u_i_2src_2main_8cpp.js  _markov_passwords_g_u_i_2src_2main_8cpp__incl.md5  (+1139 more)
docs/dark/: _c_l_i_8cpp.html  _c_l_i_8cpp__incl.md5  _c_l_i_8cpp_source.html  _c_l_i_8h.html  _c_l_i_8h__dep__incl.map  _c_l_i_8h__dep__incl.md5  _c_l_i_8h__incl.map  _c_l_i_8h__incl.md5  _c_l_i_8h_source.html  _generate_8cpp.html  _generate_8cpp__incl.md5  _generate_8cpp_source.html  _generate_8h.html  _generate_8h__incl.map  _generate_8h__incl.md5  _generate_8h_source.html  _markov_a_p_i_c_l_i_2src_2main_8cpp.html  _markov_a_p_i_c_l_i_2src_2main_8cpp__incl.map  _markov_a_p_i_c_l_i_2src_2main_8cpp__incl.md5  _markov_a_p_i_c_l_i_2src_2main_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.map  (+1048 more)
documentation/: Doxyfile  Doxyfile-Base.comp  Doxyfile-Dark  Doxyfile-Dark.comp  Doxyfile-Latex  Doxyfile-Latex.comp  Doxyfile-Light  Doxyfile-Light.comp  Doxyfile-mcss  dirs.docs  doxygen.sty  footer.tex  header.tex  mcss.conf.py
toolchains/: clang-w64-x86_64.cmake  mingw-w64-x86_64.cmake
(+1520 files in other folders)
